--- a/main.css
+++ b/main.css
@@ -2,3 +2,12 @@
     overflow: hidden;
     margin: 0;
 }
+
+.instructions {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+    cursor: default;
+}
